[package]
name = "xdptun"
version = "0.1.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "UDP packet obfuscation with eBPF, which tunnels UDP over pseudo-TCP"
documentation = "https://github.com/myl7/xdptun#readme"
homepage = "https://github.com/myl7/xdptun"
repository = "https://github.com/myl7/xdptun.git"
license = "GPL-2.0-or-later"
keywords = ["ebpf", "xdp", "udp-over-tcp", "tc-bpf", "udp-obfuscation"]
categories = ["network-programming"]

[dependencies]
libbpf-rs = "0.16"
