[tool.poetry]
name = "xdptun-test-h3"
version = "0.1.0"
description = ""
authors = ["myl7 <myl@myl.moe>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
aioquic = "^0.9.19"
asgiref = "^3.5.0"
httpbin = "^0.7.0"
starlette = "^0.19.0"
wsproto = "^1.1.0"
uvloop = {version = "^0.16.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
